--- a/src/app/cliente/cliente-delete/cliente-delete.component.html
+++ b/src/app/cliente/cliente-delete/cliente-delete.component.html
@@ -1,4 +1,5 @@
-  <div class="modal" tabindex="-1" role="dialog" id="myModal">
+
+<div class="modal" tabindex="-1" role="dialog" id="myModal" aria-labelledby = "deleteModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -12,8 +13,8 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-danger" (click)="deleteCliente(clienteDetail)">Eliminar</button>
-            <button type="button" class="btn btn-success" data-dismiss="modal">Cancelar</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
           </div>
         </div>
       </div>
-    </div>
+</div>
