--- a/src/app/cliente/cliente-detail/cliente-detail.component.css
+++ b/src/app/cliente/cliente-detail/cliente-detail.component.css
@@ -5,3 +5,158 @@ i.icon-blue {
 i.icon-red {
     color: rgb(140, 0, 26);
 }
+
+  .principal{
+    background: #ded4df;
+  }
+  
+
+  .num_works{
+    font-family:  'Quicksand', sans-serif;
+  }
+  .num_followers{
+    font-family:  'Quicksand', sans-serif;
+  }
+  .num_following{
+    font-family:  'Quicksand', sans-serif;
+  }
+  .floated {
+    display: inline-block;
+    position: relative;
+    margin: false;
+  }
+  .floated.right {
+    float: right;
+  }
+  .abs-center {
+    display: false;
+    position: absolute;
+    margin: false;
+    top: 50%;
+    left: 50%;
+    right: false;
+    bottom: false;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    text-align: center;
+    width: 88%;
+  }
+  .vert-center {
+    display: false;
+    position: absolute;
+    margin: false;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
+
+  
+  .profile-card {
+    position: relative;
+    width: calc(100% - 40px);
+    padding-top: 100px;
+    margin: 70px auto 30px;
+    background-color:#ffff;
+    box-shadow: 0 2px 6px -2px rgba(0,0,0,0.26);
+  }
+  
+  .profile-pic img {
+    display: false;
+    position: absolute;
+    margin: false;
+    top: -90px;
+    left: 50%;
+    right: false;
+    bottom: false;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    height: 180px;
+    width: 180px;
+    border: 10px solid #fff;
+    border-radius: 100%;
+    background-size: cover;
+  }
+  .profile-name-container {
+    margin: 0 auto 10px;
+    padding: 10px;
+    text-align: center;
+  }
+  .btn-primary{
+    background-color: rgb(153, 153, 153);
+  }
+  .user-name {
+    font-family:  'Quicksand', sans-serif;
+    font-size: 24px;
+    letter-spacing: 1px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 12px;
+  }
+  .user-desc {
+    letter-spacing: 1px;
+    font-family:  'Quicksand', sans-serif;
+    color: #999;
+  }
+  .profile-card-stats {
+    height: 75px;
+    padding: 10px 0px;
+    text-align: center;
+    overflow: hidden;
+  }
+  .profile-stat {
+    height: 100%;
+    width: 33.3333%;
+  }
+  .profile-stat:after {
+    color: #999;
+  }
+  .works::after {
+    font-family:  'Quicksand', sans-serif;
+    content: "Correo";
+  }
+  .followers::after {
+    font-family:  'Quicksand', sans-serif;
+    content: "user";
+  }
+  .following::after {
+    font-family:  'Quicksand', sans-serif;
+    content: "Telefono";
+  }
+  
+  @media screen and (max-width: 1000px) {
+    .container {
+      max-width: 562px;
+    }
+  
+   
+  
+  }
+  
+  .image {
+    width: 300px;
+    height: 300px;
+    cursor: pointer;
+    margin: 0 40px 40px;
+    overflow: hidden;
+    border-radius: 5px;
+    border: 10px solid #ffff;
+    box-shadow: 0 2px 6px -2px rgba(0,0,0,0.26);
+    background-color: rgba(0,0,0,0.4);
+    background-size: cover !important;
+    -webkit-transition: 0.2s cubic-bezier(0.5, 0, 0.2, 1);
+    transition: 0.2s cubic-bezier(0.5, 0, 0.2, 1);
+  }
+  .image img{
+    
+    width: 300px;
+    height: 300px;
+    
+  }
+
+  #hola 
+  {
+    background: #f4f4f4;
+  }
+  
+  
+  
