--- a/src/app/cliente/cliente-edit/cliente-edit.component.html
+++ b/src/app/cliente/cliente-edit/cliente-edit.component.html
@@ -35,6 +35,15 @@
                              <div class="invalid-feedback">
                           <div>Falta ingresar el nombre</div>
                       </div>
+
+                      <div class="form-group">
+                          <label for="clienteImagen"><b>Ruta de foto de perfil</b></label>
+                          <input type="text" name="clienteImagen" class="form-control" id="clienteImagen" [(ngModel)]="cliente.imagen"
+                                 #clienteImagen="ngModel" [ngClass]="{ 'is-invalid': f.submitted && clienteImagen.invalid }" required>
+                                 <div class="invalid-feedback">
+                              <div>Falta ingresar la ruta de la imagen</div>
+                          </div>
+                        
     </div>
   </div>
   <div class="row">
