--- a/src/app/auth/auth-login/auth-login.component.html
+++ b/src/app/auth/auth-login/auth-login.component.html
@@ -5,7 +5,7 @@
         <br>
         <form name="login" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
             <div class="form-group">
-                <label for="username"><b>Name</b></label>
+                <label for="username"><b>Login</b></label>
                 <input type="text" name="username" class="form-control" id="username" [(ngModel)]="user.nombre" required>
             </div>
             <div class="form-group">
