--- a/src/app/cliente/cliente-forma-de-pago/cliente-forma-de-pago.component.html
+++ b/src/app/cliente/cliente-forma-de-pago/cliente-forma-de-pago.component.html
@@ -2,7 +2,7 @@
 
     <p>
   
-      <button class="btn-primary" [ngClass]="{ 'btn-primary': isCollapsed,'btn-outline-primary':!isCollapsed}" (click)="getClienteFormasDePago()">
+      <button type="button" class="btn btn-lg btn-secondary" [ngClass]="{ 'btn-secondary': isCollapsed,'btn-outline-secondary':!isCollapsed}" (click)="getClienteFormasDePago()">
       Mis Formas De Pago
     </button>
   </p>
