--- a/src/app/forma-de-pago/forma-de-pago-detail/forma-de-pago-detail.component.html
+++ b/src/app/forma-de-pago/forma-de-pago-detail/forma-de-pago-detail.component.html
@@ -34,3 +34,33 @@
     <div *ngIf="showDelete">
         <app-forma-de-pago-delete [formaDePagoDetail]="formaDePagoDetail"></app-forma-de-pago-delete>
     </div>
+
+
+<div class="card">
+  <div class="card__front card__part">
+    <img class="card__front-square card__square" src="https://image.ibb.co/cZeFjx/little_square.png">
+    <img class="card__front-logo card__logo" src={{foto}}>
+    <p class="card_numer">{{formaDePagoDetail.numeroTarjeta}}</p>
+    <div class="card__space-75">
+      <span class="card__label">Card holder</span>
+      <p class="card__info">John Doe</p>
+    </div>
+    <div class="card__space-25">
+      <span class="card__label">Expires</span>
+            <p class="card__info">{{formaDePagoDetail.fechaVencimiento}}</p>
+    </div>
+  </div>
+  
+  <div class="card__back card__part">
+    <div class="card__black-line"></div>
+    <div class="card__back-content">
+      <div class="card__secret">
+        <p class="card__secret--last">{{formaDePagoDetail.numeroVerificacion}}</p>
+      </div>
+      <img class="card__back-square card__square" src="https://image.ibb.co/cZeFjx/little_square.png">
+      <img class="card__back-logo card__logo" src="https://www.fireeye.com/partners/strategic-technology-partners/visa-fireeye-cyber-watch-program/_jcr_content/content-par/grid_20_80_full/grid-20-left/image.img.png/1505254557388.png">
+      
+    </div>
+  </div>
+  
+</div>
