Tarjetas mas lindas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
                 &nbsp;
                 <li class ="nav-item"><a class ="nav-link" id="calificacion-navbar-item" routerLink="/formasDePago/list"*ngxPermissionsOnly="['ADMIN']">Formas De Pago</a></li>
                 &nbsp;
-                <li class ="nav-item"><a class ="nav-link" id="calificacion-navbar-item" routerLink ="/clientes/{{loginCliente}}"  *ngxPermissionsOnly="['CLIENT']">Mi Cuenta</a></li>
+                <li class ="nav-item"><a class ="nav-link" id="calificacion-navbar-item" routerLink ="/clientes/login"  *ngxPermissionsOnly="['CLIENT']">Mi Cuenta</a></li>
                 &nbsp;
               
             </ul>
