--- a/src/app/forma-de-pago/forma-de-pago-detail/forma-de-pago-detail.component.css
+++ b/src/app/forma-de-pago/forma-de-pago-detail/forma-de-pago-detail.component.css
@@ -11,10 +11,10 @@ i.icon-blue {
 
   @import url('https://fonts.googleapis.com/css?family=Space+Mono:400,400i,700,700i');
 
-*{
+/**{
   box-sizing:border-box;
   font-family: 'Space Mono', monospace;
-}
+}*/
 
 body, html{
   margin:0;
@@ -93,7 +93,7 @@ z-index: 1000;
 }
 
 .card__logo {
-    height: 16px;
+    height: 20px;
 }
 
 .card__front-logo{
