--- a/src/app/forma-de-pago/forma-de-pago-list/forma-de-pago-list.component.html
+++ b/src/app/forma-de-pago/forma-de-pago-list/forma-de-pago-list.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="container-fluid col-5">
+    <div class="container-fluid ">
         
           <table class = "table table-hover">
             <thead class="thead-dark">
