Checkout estetico y funcional solo front

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,7 +40,8 @@
                 &nbsp;
                 <li class="nav-item"><a class="nav-link" id="calificacion-navbar-item" routerLink="/clientes/1"
                         *ngxPermissionsOnly="['CLIENT']">Mi Cuenta</a></li>
-                <li class ="nav-item"><a class ="nav-link" id="calificacion-navbar-item" routerLink ="/clientes/100"  *ngxPermissionsOnly="['CLIENT']">Mi Cuenta</a></li>
+                <li class="nav-item"><a class="nav-link" id="calificacion-navbar-item" routerLink="/clientes/100"
+                        *ngxPermissionsOnly="['CLIENT']">Mi Cuenta</a></li>
                 &nbsp;
             </ul>
 
@@ -61,11 +62,11 @@
                     </div>
                 </div>
                 <div class="flex-row" *ngxPermissionsOnly="['CLIENT']">
-                        <div class="form-inline">
-                            <li><a id="logout-navbar-item" routerLink="/shopping-cart" ><span
-                                        class="fa fa-shopping-cart"></span>Carrito de compras</a></li>
-                        </div>
+                    <div class="form-inline">
+                        <li><a id="logout-navbar-item" routerLink="/shopping-cart"><span
+                                    class="fa fa-shopping-cart"></span>Carrito de compras</a></li>
                     </div>
+                </div>
             </div>
         </div>
     </nav>
