--- a/src/app/fotografo/fotografo-detail/fotografo-detail.component.html
+++ b/src/app/fotografo/fotografo-detail/fotografo-detail.component.html
@@ -11,7 +11,7 @@
   
 
     
-    <div class="page-header header-filter"  style="background-image:url('http://wallpapere.org/wp-content/uploads/2012/02/black-and-white-city-night.png');">	</div>
+    <div class="page-header header-filter"  style="background-image:url('https://www.blogdelfotografo.com/wp-content/uploads/2015/10/15583603744_33147607c0_k.jpg');">	</div>
    
     <div class="main main-raised">
         <div class="row">
@@ -37,7 +37,7 @@
   
                              
                               <li class="nav-item">
-                                  <a class="nav-link" href="#favorite" role="tab" data-toggle="tab">
+                                  <a class="nav-link" href="#favorite" role="tab" data-toggle="tab" onclick="return confirm ('¿Estas seguro que desea eliminar este perfil?')" (click) = "delete()" routerLink="/fotografos/list">
                                     <i class='fas fa-trash'></i>
                                       Eliminar perfil
                                   </a>
