--- a/src/app/interes-fotografico/interes-fotografico-list/interes-fotografico-list.component.css
+++ b/src/app/interes-fotografico/interes-fotografico-list/interes-fotografico-list.component.css
@@ -14,6 +14,7 @@ body {
 }
 
 
+
 .conatiner {
 	width: 100%;
 }
@@ -46,6 +47,9 @@ body {
 	transition: 200ms ease-in-out;
 	-webkit-box-shadow: 0 0 15px rgba(0,0,0,0.3);
 	        box-shadow: 0 0 15px rgba(0,0,0,0.3);
+}
+.prueb h1{
+	color : #fff;
 }
 .box:hover {
 	margin-bottom: -10px;
