--- a/src/app/interes-fotografico/interes-fotografico-list/interes-fotografico-list.component.html
+++ b/src/app/interes-fotografico/interes-fotografico-list/interes-fotografico-list.component.html
@@ -1,3 +1,18 @@
+
+<div class = "prueb">
+<h1>.</h1>
+</div>
+<div class="row justify-content-center align-self-center">
+  <button [ngClass]="{ 'btn-primary': !showCreate, 'btn-danger': showCreate }" type="button" class="btn"
+      (click)="showHideCreate()">Agregar interes fotografico</button>
+</div>
+<div *ngIf="showCreate">
+  <app-interes-fotografico-create (cancel)="showHideCreate()" (create)="ngOnInit()" *ngIf="showCreate">
+  </app-interes-fotografico-create>
+</div>
+<div class = "prueb">
+  <h1>.</h1>
+  </div>
 <div class="conatiner">
     <div class="wrap">
       
