Funcionamiento del carrito con el back

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
                         routerLink="/photos/list">Fotos</a></li>
                 &nbsp;
                 <li class="nav-item"><a class="nav-link" id="calificacion-navbar-item" routerLink="/facturas/list"
-                        *ngxPermissionsOnly="['ADMIN']">Facturas</a></li>
+                        *ngxPermissionsOnly="['ADMIN','CLIENT']">Facturas</a></li>
                 &nbsp;
                 <li class="nav-item"><a class="nav-link" id="calificacion-navbar-item" routerLink="/formasDePago/list"
                         *ngxPermissionsOnly="['ADMIN']">Formas De Pago</a></li>
