--- a/src/app/shopping-cart/shopping-cart.component.css
+++ b/src/app/shopping-cart/shopping-cart.component.css
@@ -1,5 +1,6 @@
-
-
+.dadcontainer{
+    padding-top: 40px; 
+}
 .quantity {
     float: left;
     margin-right: 15px;
@@ -42,8 +43,8 @@
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     border-radius: 0;
-    -webkit-background-size: 6px 30px;
-    -moz-background-size: 6px 30px;
+    background-size: 6px 30px;
+    moz-background-size: 6px 30px;
     color: #bbb;
     font-size: 20px;
     position: absolute;
